refactor: Fix nullability problems